--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,5 +12,5 @@ en:
   payment_confirmation: "Payment Confirmation"
   payment_information: "Payment Information"
   please_make_your_payment_by_using_bank_transfer_to_one_of_the_following_banks: "Please make your payment by using bank transfer to the following bank"
-  please_continue_to_the_payment_confirmation_page_once_you_ve_made_your_payment: "Please continue to the order details page once you've noted bank details."
+  please_continue_to_the_payment_confirmation_page_once_you_ve_made_your_payment: "Please continue to next page once you've noted bank details.card payment option is available on next page"
   thank_you_for_confirming_your_payment_your_order_is_currently_being_processed: "Your order is currently booked. you want to make payment to send plants"
