--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,6 @@ en:
   editing_bank_account: "Editing Bank Account"
   payment_confirmation: "Payment Confirmation"
   payment_information: "Payment Information"
-  please_make_your_payment_by_using_bank_transfer_to_one_of_the_following_banks: "Please make your payment by using bank transfer to one of the following banks"
-  please_continue_to_the_payment_confirmation_page_once_you_ve_made_your_payment: "Please continue to the payment confirmation page once you've made your payment"
+  please_make_your_payment_by_using_bank_transfer_to_one_of_the_following_banks: ""
+  please_continue_to_the_payment_confirmation_page_once_you_ve_made_your_payment: ""
   thank_you_for_confirming_your_payment_your_order_is_currently_being_processed: "Thank you for confirming your payment. Your order is currently being processed."
